--- a/components/gdpr/GdprSection.module.scss
+++ b/components/gdpr/GdprSection.module.scss
@@ -10,6 +10,8 @@
   }
 
   a {
-    text-decoration: underline; 
+    text-decoration-style: solid;
+    text-decoration-line: underline;
+    text-decoration-color: variables.$primary;
   }
 }
