--- a/styles/settings/globals.scss
+++ b/styles/settings/globals.scss
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
   color:variables.$primary;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
